error in loss function interpretation

--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -71,7 +71,7 @@ This is the error between our model's output and the target labels, as quantifie
 	Given a value for parameter $\theta$ and the \textit{squared error loss}, we say that the \textbf{prediction error} for the resulting classifier $f_\theta$ under the squared loss is
 
 	\begin{equation}
-	PE(\theta) =L(Y - h(X \cdot \theta) )  \\
+	PE(\theta) =L(Y, h(X \cdot \theta) )  \\
 	=  {(Y - h(X \cdot \theta) )}^2
 	\end{equation}
 
