--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -58,9 +58,9 @@ With this, \cref{eq:rss} can be read as an approximation of the expected predict
 
 
 \begin{definition}{Prediction Error:}
-	Given a loss function $L(\cdot,\cdot)$ and a function $f$, we say that the \textbf{prediction error} for the resulting classifier $f$ for (Y,X)is
+	Given a loss function $L(\cdot,\cdot)$ and a function $f$, we say that the \textbf{prediction error} for the resulting classifier $f$ for (Y,X) is
 	\[
-	PE(f_\theta)= \left[ L(Y,f(X))\right]
+	PE(f_\theta)= \left[ L(Y,f_\theta(X))\right]
 	\]
 \end{definition}
 
